fuentes principales actualizadas

--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ nav ul li {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    font-family: "Oswald", sans-serif;
-    letter-spacing: 2px;
-    font-size: 30px;
+    font-family: "Rock Salt";
+    letter-spacing: 5px;
+    font-size: 20px;
 }
 
 
@@ -70,8 +70,8 @@ nav ul li {
 }
 
 .nombre-artista {
-    font-size: 70px;
-    font-family: "Righteous";
+    font-size: 100px;
+    font-family: "Rock Salt";
     letter-spacing: 5px;
     margin: 0;
 
@@ -82,7 +82,7 @@ nav ul li {
     /* Alinear el texto a la izquierda */
     font-size: 18px;
     /* Tamaño de la fuente */
-    font-family: "Oswald", sans-serif;
+    font-family: "Righteous", serif;
     color: #f4f4f4;
     width: 60%;
     letter-spacing: 1px;
@@ -90,7 +90,7 @@ nav ul li {
 
 .subtitulos {
     color: #a95e0b;
-    font-family: "Oswald", sans-serif;
+    font-family: "Rock Salt";
     font-size: 40px;
 }
 
